// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes.html - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["lwc"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
<template>
  <div
    data-for={value}
    data-for={value[0]}
    data-for={value.toString()}
    data-for={value()}
    class="test"
  ></div>
  </template>
<template if:true={value.error}>
    <c-error-panel errors={value.error}></c-error-panel>
</template>
<a href="#" onclick={aFunction}>
=====================================output=====================================
<template>
  <div
    data-for={value}
    data-for={value[0]}
    data-for={value.toString()}
    data-for={value()}
    class="test"
  ></div>
</template>
<template if:true={value.error}>
  <c-error-panel errors={value.error}></c-error-panel>
</template>
<a href="#" onclick={aFunction}></a>

================================================================================
`;

exports[`attributes.html - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["lwc"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
<template>
  <div
    data-for={value}
    data-for={value[0]}
    data-for={value.toString()}
    data-for={value()}
    class="test"
  ></div>
  </template>
<template if:true={value.error}>
    <c-error-panel errors={value.error}></c-error-panel>
</template>
<a href="#" onclick={aFunction}>
=====================================output=====================================
<template>
  <div
    data-for={value}
    data-for={value[0]}
    data-for={value.toString()}
    data-for={value()}
    class="test"
  ></div>
</template>
<template if:true={value.error}>
  <c-error-panel errors={value.error}></c-error-panel>
</template>
<a href="#" onclick={aFunction}></a>

================================================================================
`;

exports[`attributes.html format 1`] = `
====================================options=====================================
parsers: ["lwc"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <div
    data-for={value}
    data-for={value[0]}
    data-for={value.toString()}
    data-for={value()}
    class="test"
  ></div>
  </template>
<template if:true={value.error}>
    <c-error-panel errors={value.error}></c-error-panel>
</template>
<a href="#" onclick={aFunction}>
=====================================output=====================================
<template>
  <div
    data-for={value}
    data-for={value[0]}
    data-for={value.toString()}
    data-for={value()}
    class="test"
  ></div>
</template>
<template if:true={value.error}>
  <c-error-panel errors={value.error}></c-error-panel>
</template>
<a href="#" onclick={aFunction}></a>

================================================================================
`;
